[package]
name = "luminal_cairo"
version = "0.1.0"
edition = "2021"
description = "Cairo compiler for luminal"
license = "MIT OR Apache-2.0"

[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../luminal_nn" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", rev = "v1.0.1", features = [
    "std",
    "cairo-1-hints",
] }
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm", rev = "v1.0.1" }
cairo-lang-sierra = { version = "2.7.0", default-features = false }
num-bigint = "0.4"
num-traits = "0.2.19"
thiserror = "1.0.63"
serde_json = "1.0.120"
tracing = "0.1.40"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
lazy_static = "1.5.0"
itertools = "0.13.0"
tracing-subscriber = "0.3.18"

[dev-dependencies]
paste = "1.0.15"
rand = "0.8.5"
dfdx = { version = "0.13" }
candle-core = "0.5.0"
ctor = "0.2.8"
